--- a/package.json
+++ b/package.json
@@ -6,16 +6,42 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
+    "@types/mockjs": "^1.0.6",
+    "@types/react-router-dom": "^5.1.6",
+    "axios": "^0.26.1",
+    "mockjs": "^1.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.2",
+    "swr": "^1.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "webpack-dev-server --open",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@types/react": "^18.0.6",
+    "@types/react-dom": "^18.0.2",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.2",
+    "less-loader": "^5.0.0",
+    "source-map-loader": "^3.0.1",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "eslintConfig": {
     "extends": [
