refactor: update react18,swr.etc

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app-18",
+  "name": "react-recoil-swr",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "webpack-dev-server --open",
+    "dev": "webpack-dev-server --hot --open",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
